--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,3 +1,10 @@
+/*Imports*/
+
+@import url('https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;600;700&display=swap');
+
+
+
+
 *{
     padding: 0;
     margin: 0;
@@ -7,4 +14,102 @@
 body{
     height: 100%;
     background-color: #111;
+}
+
+h1{
+    font-size: 3rem;
+    font-weight: 50;
+    margin: 1rem 0 3rem;
+    text-align: center;
+    color: #fff;
+    font-family: 'Hind', sans-serif;
+}
+
+.styling{
+    font-weight: 800;
+    color: lime;
+}
+
+.input-div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.input-div .input{
+    padding: .5rem 1rem;
+    height: 50px;
+    outline: none;
+    background-color: #fff;
+    font-size: 1.15rem;
+    margin: .25rem;
+    border-radius: 25px;
+    border: none;
+}
+
+.addButton{
+    height: 50px;
+    width: 50px;
+    border-radius: 25px;
+    border: none;
+    outline: none;
+    color: #fff;
+    background-color: lime;
+    margin: .25rem;
+    cursor: pointer;
+    transition: .3s ease;
+}.addButton:hover{
+    opacity: .7;
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 2rem;
+}
+
+.item{
+    padding: .5rem;
+    margin-bottom: 1.5rem;
+    border-bottom: 4px solid #fff;
+}
+
+.item-input{
+    background: none;
+    outline: none;
+    color: #fff;
+    border: none;
+    width: 350px;
+    font-size: 1.4rem;
+}
+
+.editButton{
+    font-size: 1.4rem;
+    margin: 0 .5rem;
+    font-family: 'Hind', sans-serif;
+    background: none;
+    outline: none;
+    color: lime;
+    border: none;
+    cursor: pointer;
+    transition: .3s ease;
+}.editButton:hover{
+    opacity: .7;
+}
+
+.removeButton{
+    font-size: 1.4rem;
+    font-family: 'Hind', sans-serif;
+    background: none;
+    outline: none;
+    color: #e00;
+    border: none;
+    cursor: pointer;
+    transition: .3s ease;
+}.removeButton:hover{
+    opacity: .7;
 }
